# mass-guess-registrator

./: .gitignore  Procfile  README.md  pyproject.toml
server/: app.py
server/templates/: index.html
