[tool.poetry]
name = "mass_guest_registrator"
version = "0.2.0"
description = ""
authors = ["Ivan Alvarez <alvarivan88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.8"
openpyxl = "^3.0.10"
flask = "^2.2.2"
python-dotenv = "^0.21.0"
names = "^0.3.0"
xl-utility = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/simple/"
secondary = true
